--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,6 +1,6 @@
 NAME = philo
 CC = gcc
-INCLUDE = -I include
+INCLUDE = -pthread -I include
 CFLAGS = -Wall -Werror -Wextra
 SRC = init_philo.c main.c philo.c utils.c monitor.c routines.c
 SOURCE = $(addprefix src/, $(SRC))
@@ -19,8 +19,8 @@ $(OBJ): $(OBJDIR) $(SOURCE)
 $(OBJDIR):
 	mkdir $(OBJDIR)
 
-test:
-	./$(NAME) 5 1000 200 300 5
+test: re
+	./$(NAME) 5 500 200 200 5
 
 clean:
 	rm -rf $(OBJDIR)
