--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -2,8 +2,7 @@ NAME = philo
 CC = gcc
 INCLUDE = -pthread -I include
 CFLAGS = -Wall -Werror -Wextra 
-SRC = init_philo_bonus.c main.c philo_bonus.c utils_bonus.c \
-		end_bonus.c \monitor_bonus.c routines_bonus.c
+SRC = init_philo_bonus.c main.c philo_bonus.c utils_bonus.c end_bonus.c monitor_bonus.c routines_bonus.c
 SOURCE = $(addprefix src/, $(SRC))
 OBJDIR = obj/
 OBJ =  $(addprefix $(OBJDIR), $(SRC:.c=.o))
@@ -19,6 +18,9 @@ $(OBJ): $(OBJDIR) $(SOURCE)
 
 $(OBJDIR):
 	mkdir $(OBJDIR)
+
+test2: re
+	./$(NAME) 5 500 200 200 5
 
 test: re
 	valgrind --leak-check=full --show-leak-kinds=all ./$(NAME) 5 500 200 200 5
