--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
 			"type": "lldb",
 			"request": "launch",
 			"name": "Debug",
-			"program": "${workspaceFolder}/philo/philo",
+			"program": "${workspaceFolder}/philo_bonus/philo",
 			"args": [ "5", "500" ,"200" ,"200" ,"5"],
-			"cwd": "${workspaceFolder}/philo"
+			"cwd": "${workspaceFolder}/philo_bonus"
 		}
 	]
 }
