--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -1,38 +1,34 @@
-NAME = philo_bonus
-CC = gcc
-INCLUDE = -pthread -I include
-CFLAGS = -Wall -Werror -Wextra -g3
-SRC = init_philo_bonus.c main_bonus.c philo_bonus.c utils_bonus.c end_bonus.c monitor_bonus.c routines_bonus.c
-SOURCE = $(addprefix src/, $(SRC))
-OBJDIR = obj/
-OBJ =  $(addprefix $(OBJDIR), $(SRC:.c=.o))
+NAME		= philo_bonus
+HEADER		= -I ./include/
+SRCDIR		= srcs
+SOURCES		= init_philo_bonus.c main_bonus.c philo_bonus.c utils_bonus.c \
+			end_bonus.c monitor_bonus.c routines_bonus.c
+SRCS		= $(addprefix $(SRCDIR)/, $(SOURCES))
+
+OBJDIR		= objs
+OBJS		= $(SRCS:$(SRCDIR)/%.c=$(OBJDIR)/%.o)
+
+GCC			= clang
+CFLAGS		= -Wall -Werror -Wextra
+RM			= rm -rf
+VAL			= valgrind --tool=helgrind --history-level=approx
 
 all: $(NAME)
 
-$(NAME): $(OBJ)
-	$(CC) $(CFLAGS) $(INCLUDE) $(OBJ) -o $(NAME)
+$(NAME): $(OBJDIR) $(OBJS) 
+	$(GCC) $(OBJS) $(HEADER) -o $@ -lpthread
 
-$(OBJ): $(OBJDIR) $(SOURCE)
-	$(CC) $(CFLAGS) $(INCLUDE) -c $(SOURCE)
-	mv $(notdir ,$(OBJ)) $(OBJDIR)
+$(OBJDIR)/%.o: $(SRCDIR)/%.c
+	$(GCC) -c $(CFLAGS) $(HEADER) $< -o $@
 
 $(OBJDIR):
 	mkdir $(OBJDIR)
 
-test2: re
-	 valgrind --tool=helgrind --history-level=approx ./$(NAME) 4 310 200 100 7
-
-test: re
-	 valgrind --tool=helgrind --history-level=approx  ./$(NAME) 4 399 200 200 7
-
-test3: re
-	 valgrind --tool=helgrind --history-level=approx ./$(NAME) 1 500 500 600
-
 clean:
-	rm -rf $(OBJDIR)
+	$(RM) $(OBJDIR)
 
 fclean: clean
-	rm -f $(NAME)
+	$(RM) $(NAME)
 
 re: fclean all
 
